--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,6 +136,10 @@ select {
   font-family: inherit;
 }
 
+input[type="file"] {
+  border: 1px solid var(--color-foreground);
+}
+
 input,
 select {
   height: 48px;
@@ -170,8 +174,12 @@ button:hover {
   width: 200px;
   height: 250px;
   background-color: var(--color-foreground);
-  opacity: 25%;
   flex-shrink: 0;
+}
+
+.issue-cover img {
+  width: 100%;
+  height: 100%;
 }
 
 .separator {
