--- a/templates/issues/issue_delete.html
+++ b/templates/issues/issue_delete.html
@@ -8,7 +8,9 @@
         {% csrf_token %}
         <p>Are you sure you want to delete the following issue:</p>
         <div class="issue-detail-container">
-            <div class="issue-cover"></div>
+            <div class="issue-cover">
+                <img src="{{ object.cover.url }}" alt="{{ object.title }}">
+            </div>
             <div class="issue-detail-info">
                 <div class="issue-detail-heading">
                     <h3>{{ object.title }}</h3>
