--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -2,7 +2,10 @@
 {% block content %}
     <h2>Daily</h2>
     <div class="issue">
-        <div class="issue-cover"></div>
+        <div class="issue-cover">
+            <img src="{{ latest_daily_issue.issue.cover.url }}"
+                 alt="{{ latest_daily_issue.issue.title }}">
+        </div>
         <div class="issue-content">
             <div class="actions">
                 <a href="{% url 'issue_detail' latest_daily_issue.issue.pk %}">Browse this issue</a>
@@ -26,7 +29,10 @@
     </div>
     <h2>Weekly</h2>
     <div class="issue">
-        <div class="issue-cover"></div>
+        <div class="issue-cover">
+            <img src="{{ latest_weekly_issue.issue.cover.url }}"
+                 alt="{{ latest_weekly_issue.issue.title }}">
+        </div>
         <div class="issue-content">
             <div class="actions">
                 <a href="{% url 'issue_detail' latest_weekly_issue.issue.pk %}">Browse this issue</a>
@@ -50,7 +56,10 @@
     </div>
     <h2>Monthly</h2>
     <div class="issue">
-        <div class="issue-cover"></div>
+        <div class="issue-cover">
+            <img src="{{ latest_monthly_issue.issue.cover.url }}"
+                 alt="{{ latest_monthly_issue.issue.title }}">
+        </div>
         <div class="issue-content">
             <div class="actions">
                 <a href="{% url 'issue_detail' latest_monthly_issue.issue.pk %}">Browse this issue</a>
